<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/constraintlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/Constraintlayout"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:background="@color/green"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/input"
        android:textSize="32sp"
        android:textColor="@color/grey"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintlayout"
        />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="16dp"
        android:hint="@string/hint"
        android:gravity="right"
        android:textSize="32sp"
        android:background="@color/brown"
        tools:ignore="MissingConstraints,RtlHardcoded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input"/>


    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext"
        tools:ignore="MissingConstraints"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/divide"
            android:text="@string/divide"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/multiply"
            android:text="@string/multiply"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/add"
            android:text="@string/add"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:id="@+id/point"
            android:text="@string/point"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/equal"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>
        <Button
            android:id="@+id/substract"
            android:text="@string/substract"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlHardcoded"/>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>