<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,UselessLeaf">

        <ImageView
            android:id="@+id/space_station_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/space_station_icon"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/rocket_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/rocket_icon"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/rover_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/rover_icon"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/space_station_text_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:text="@string/space_stations"
            android:textColor="@color/grey"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:id="@+id/rocket_text_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/flights"
            android:textColor="@color/grey"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:id="@+id/rover_text_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/rovers"
            android:textColor="@color/grey"
            android:layout_marginRight="30dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

    </FrameLayout>

    <Button
        android:id="@+id/dca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:scaleX="1.5"
        android:scaleY="3.0"
        android:text="@string/dca"
        android:textColor="@color/white"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintEnd_toEndOf="@id/space_station_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framelayout"
        tools:ignore="MissingConstraints,NotSibling,RtlHardcoded" />



    <Button
        android:id="@+id/mars"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mars"
        android:textColor="@color/white"
        android:background="@color/green"
        android:scaleX="1.5"
        android:scaleY="3.0"
        android:layout_marginTop="75dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/rover_frame"
        app:layout_constraintTop_toBottomOf="@id/framelayout"
        tools:ignore="MissingConstraints,NotSibling,RtlHardcoded"/>

    <ImageButton
        android:id="@+id/double_arrows"
        android:src="@drawable/double_arrows"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@id/mars"
        app:layout_constraintStart_toStartOf="@id/dca"
        app:layout_constraintTop_toBottomOf="@id/framelayout"
        tools:ignore="MissingConstraints,NotSibling,RtlHardcoded"/>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/double_arrows"
        tools:ignore="MissingConstraints">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/brown"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/oneway"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/traveller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/brown"
            android:text="@string/traveller"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout4"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/rocket_two"
            android:src="@drawable/rocket_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/galaxy"
            android:src="@drawable/galaxy"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>


    <Button
        android:id="@+id/depart"
        android:layout_width="391dp"
        android:layout_height="52dp"
        android:layout_marginTop="96dp"
        android:background="@color/green"
        android:text="@string/depart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout5"
        tools:ignore="RtlHardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>